--- a/pom.xml
+++ b/pom.xml
@@ -142,4 +142,10 @@
             </plugin>
         </plugins>
     </reporting>
+    <distributionManagement>
+        <site>
+            <id>shrek</id>
+            <url>scp://@shrek.unideb.hu:2222/home/<P80K9F>/public_html/${project.artifactId}</url>
+        </site>
+    </distributionManagement>
 </project>
